RESOLVED FIXED57637
Web Inspector: InjectedScriptManager should not try to access inspected window in case of workers
https://bugs.webkit.org/show_bug.cgi?id=57637
Summary Web Inspector: InjectedScriptManager should not try to access inspected windo...
Yury Semikhatsky
Reported 2011-04-01 09:04:20 PDT
Web Inspector: InjectedScriptManager should not try to access inspected window in case of workers. It now contains canAccessInspectedWindow method which assumes that inspected ScriptState is always from a DOM window. It's not true in case of workers.
Attachments
Patch (10.43 KB, patch)
2011-04-04 00:09 PDT, Yury Semikhatsky
pfeldman: review+
Yury Semikhatsky
Comment 1 2011-04-04 00:09:20 PDT
Yury Semikhatsky
Comment 2 2011-04-04 01:09:02 PDT
Note You need to log in before you can comment on or make changes to this bug.